z-index fixed header

--- a/css/simple-scheduler.css
+++ b/css/simple-scheduler.css
@@ -13,7 +13,7 @@
     top: 0px;
     left: 0px;
     width: 100%;
-    z-index: 10;
+    z-index: 2;
     border: 1px solid #f9f9f9;
 
 }
